Remove email parameter from all queries and use user principal object
